Debug reconnection issue

--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -229,10 +229,12 @@
             }
 
             function switchToOnlineMode() {
+                console.log('switchToOnlineMode');
                 coordinator.toOnlineMode();
             }
 
             function switchToOfflineMode() {
+                console.log('switchToOfflineMode');
                 coordinator.toOfflineMode();
             }
 
