Debug reconnection issue

--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -229,10 +229,12 @@
         ***REMOVED***
 
             function switchToOnlineMode() ***REMOVED***
+                console.log('switchToOnlineMode');
                 coordinator.toOnlineMode();
         ***REMOVED***
 
             function switchToOfflineMode() ***REMOVED***
+                console.log('switchToOfflineMode');
                 coordinator.toOfflineMode();
         ***REMOVED***
 
