Debug editor's init with the history mode's value

--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -207,7 +207,9 @@
                     str = coordinator.updateState(str, currentState, newState);    
             ***REMOVED***
                 currentState = newState;
-                editor.editor.session.doc.setValue(str);
+                if(editor.isInHistoryMode()) ***REMOVED***
+                    editor.editor.session.doc.setValue(str);
+            ***REMOVED***
         ***REMOVED***
 
             function switchToHistoryMode() ***REMOVED***
