--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,37 +13,47 @@
             		<div class="row"> <!-- Demo -->
             			<h1>
                             <strong>Try MUTE, the Multi-User Text Editor</strong>
-                			<button id="btnAppCache" class="btn btn-default pull-right" onclick="updateAppCache()">
-                                <span class="glyphicon glyphicon-download"></span>
-                                Store locally
-                            </button>
+                            <span class="pull-right">
+                                <a href="/doc/demo" class="btn btn-default">
+                                    <span class="glyphicon glyphicon-edit"></span>
+                                    Full interface
+                                </a>
+                                <button id="btnAppCache" class="btn btn-default" onclick="updateAppCache()">
+                                    <span class="glyphicon glyphicon-download"></span>
+                                    Store locally
+                                </button>
+                            </span>
                         </h1>
-                        <div class="col-md-12">
-	        				<% include editor %>
-	        				<br>
-                            <div class="row">
-                                <div class="col-md-6">
-	        				       <% include awareness %>
-                                </div>
-                                <div class="col-md-6">
-                                    <form class="form-horizontal" role="form">
-                                        <div class="form-group">
-                                            <label for="link" class="col-sm-5 control-label">Invite your friends:</label>
-                                            <div class="col-sm-7">
-                                                <div class="input-group">
-                                                    <input type="text" class="form-control" id="link" value="<%= link %>" readonly="readonly" style="background-color: white;">
-                                                    <span class="input-group-btn">
-                                                        <button type="button" id="copy-button" class="btn btn-default" data-clipboard-text="<%= link %>" data-toggle="tooltip" data-placement="bottom" title="copy to clipboard" style="height:34px;"><img src="assets/img/icon-clipboard.png"></button>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-10" style="padding-right: 0px;">
+                <% include editor %>
+            </div>
+            <div class="col-md-2" style="padding-top: 15px; padding-left:0px; padding-right: 30px;">
+                <div class="panel-group" id="">
+                    <div class="panel panel-default" style="border: 0px; box-shadow: 0 0px 0px;">
+                        <div class="panel-heading" style="border: 1px solid #ddd">
+                            <h4 class="panel-title">
+                                <span class="glyphicon glyphicon-user" style="margin-right: 10px;"></span>
+                                <strong>Collaborators</strong>
+                            </h4>
                         </div>
-            		</div> <!-- End demo -->
-            		<hr>
+                        <div id="collapseOne" class="panel-collapse collapse in">
+                            <ul id="list-collaborators" class="list-group">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12"> <!-- Main content -->
             		<div class="row"> <!-- Additionnal informations -->
             			<div class="col-md-4">
             				<h1><strong>What's MUTE ?</strong></h1>
@@ -63,10 +73,40 @@
             <hr>
             <% include footer %>
         </div>
+
+        <div class="modal fade" id="modalCloseTab" tabindex="-1" role="dialog" aria-labelledby="modalCloseTabLabel" data-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="modalCloseTabLabel">Opened in a new tab</h4>
+                    </div>
+                    <div id="modal-body" class="modal-body">
+                        <p class="lead">
+                            This document has been open in another tab/window. In order to avoid some mischievous bugs, you can no longer edit this document using this tab/window. Please go back to your documents list.
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            Dismiss pop-up
+                        </button>
+                        <a href="/list" type="button" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-list"></span>
+                            Documents list
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 		<% include scripts %>
         <% include scripts-editor %>
         <% include script-dbjs %>
         <% include notifications %>
+        <script src="/assets/js/awareness-modules/remote-indicators.js"></script>
+        <script src="/assets/js/awareness-modules/collaborators-list.js"></script>
 		<script>
 			"use strict";
 
@@ -76,6 +116,8 @@
             var network;
             var awareness;
             var iframeAdded = false;
+            var version = 0;
+            var infosUsersModule;
 
             var online = false;
             var posting = $.post('/ajax/testConnection');
@@ -87,29 +129,59 @@
                 location.href = '/list';
         ***REMOVED***);
             posting.always(function () ***REMOVED***
-                db.open(***REMOVED***
-                    server: 'mute',
-                    version: 1,
-                    schema: ***REMOVED***
-                        models: ***REMOVED***
-                            key: ***REMOVED*** keyPath: 'id' , autoIncrement: true ***REMOVED***,
-                            // Optionally add indexes
-                            indexes: ***REMOVED***
-                                creationDate: ***REMOVED******REMOVED***,
-                                docID: ***REMOVED*** unique: true ***REMOVED***,
-                                history: ***REMOVED******REMOVED***,
-                                lastModificationDate: ***REMOVED******REMOVED***,
-                                replicaNumber: ***REMOVED******REMOVED***,
-                                ropes: ***REMOVED******REMOVED***,
-                                bufferLocalLogootSOp: ***REMOVED******REMOVED***,
-                                mode: ***REMOVED******REMOVED***
-                        ***REMOVED***
-                    ***REMOVED***
-                ***REMOVED***
-            ***REMOVED***)
+                openDB()
                 .done(function (s) ***REMOVED***
+                    console.log('On passe ici ?');
                     serverDB = s
-                    initPage();
+                    serverDB.docs.query()
+                    .filter('docID', '<%= docID %>')
+                    .execute()
+                    .done(function (results) ***REMOVED***
+                        var doc;
+                        if(results.length === 0) ***REMOVED***
+                            version = 1;
+                            doc = ***REMOVED***
+                                docID: '<%= docID %>',
+                                version: 1
+                        ***REMOVED***;
+                            serverDB.docs.add(doc)
+                            .done(function (item) ***REMOVED***
+                                initPage();
+                        ***REMOVED***);
+                    ***REMOVED***
+                        else ***REMOVED***
+                            version = results[0].version + 1;
+                            serverDB.docs.query()
+                            .filter('docID', '<%= docID %>')
+                            .modify(***REMOVED*** version: version ***REMOVED***)
+                            .execute()
+                            .done(function (results) ***REMOVED***
+                                initPage();
+                        ***REMOVED***);
+                    ***REMOVED***
+
+                        var interval = setInterval(function () ***REMOVED***
+                            serverDB.docs.query()
+                            .filter('docID', '<%= docID %>')
+                            .execute()
+                            .done(function (results) ***REMOVED***
+                                if(results.length === 1) ***REMOVED***
+                                    if(results[0].version !== version) ***REMOVED***
+                                        console.log(results[0].version + ' !== ' + version);
+                                        $('#modalCloseTab').modal('show');
+                                        coordinator.dispose();
+                                        network.dispose();
+                                        editor.disable();
+
+                                        coordinator = null;
+                                        editor = null;
+                                        network = null;
+                                        clearInterval(interval);
+                                ***REMOVED***
+                            ***REMOVED***
+                        ***REMOVED***);
+                    ***REMOVED*** 3000);
+                ***REMOVED***);
             ***REMOVED***);
         ***REMOVED***);
 
@@ -122,22 +194,6 @@
 
                 hljs.initHighlightingOnLoad();
 
-                if(online === true) ***REMOVED***
-                    $('#copy-button').tooltip(***REMOVED*** container: 'body', delay: ***REMOVED*** show: 0, hide: 100 ***REMOVED*** ***REMOVED***);
-                    client = new ZeroClipboard(document.getElementById("copy-button"));
-
-                    $('#copy-button').on('mouseout', function () ***REMOVED***
-                         $('#copy-button').attr('data-original-title', 'copy to clipboard');
-                ***REMOVED***);
-
-                    client.on( "ready", function( readyEvent ) ***REMOVED***
-                        client.on( "aftercopy", function( event ) ***REMOVED***
-                            $('#copy-button').attr('data-original-title', 'copied!');
-                            $('#copy-button').tooltip('show');
-                    ***REMOVED*** );
-                ***REMOVED***);
-            ***REMOVED***
-
                 currentState = 0;
                 str = '';
 
@@ -146,12 +202,25 @@
                 coordinator.setEditor(editor);
                 if(online === true) ***REMOVED***
                     network = new Mute.SocketIOAdapter(coordinator);
+                    infosUsersModule = new Mute.InfosUsersModule('<%= docID %>', coordinator, editor, network, null, serverDB);
+                    editor.setInfosUsersModule(infosUsersModule);
+                    network.setInfosUsersModule(infosUsersModule);
+                    $('#list-collaborators').collaboratorsListModule(***REMOVED***
+                        infosUsersModule: infosUsersModule,
+                        listCSSClasses: ['mute-collaborator-indicator-0', 'mute-collaborator-indicator-1', 'mute-collaborator-indicator-2']
+                ***REMOVED***);
+                    $().remoteIndicatorsModule(***REMOVED*** 
+                        infosUsersModule: infosUsersModule,
+                        textEditorAdapter: editor,
+                        networkAdapter: network,
+                        cursorsCSSClasses: ['mute-remote-cursor-0', 'mute-remote-cursor-1', 'mute-remote-cursor-2'],
+                        selectionsCSSClasses: ['mute-remote-selection-0', 'mute-remote-selection-1', 'mute-remote-selection-2']
+                ***REMOVED***);
                     coordinator.setNetwork(network);
                     network.on('receiveParole', function (data) ***REMOVED***
                         console.log('Essai: ', data);
                 ***REMOVED***);
             ***REMOVED***
-                awareness = new AwarenessAdapter(coordinator, editor, $('#<%= nbOperationsItemID %>')[0], $('#<%= lastModificationDateItemID %>')[0]);
                 coordinator.init();
                 console.log('<%= docID %>');
         ***REMOVED***
