--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,11 +81,11 @@
                         <button type="button" class="close" data-dismiss="modal">
                         <span aria-hidden="true">&times;</span>
                         </button>
-                        <h4 class="modal-title" id="modalCloseTabLabel">Opened in a new tab</h4>
+                        <h4 class="modal-title" id="modalCloseTabLabel">Open in a new tab</h4>
                     </div>
                     <div id="modal-body" class="modal-body">
                         <p class="lead">
-                            This document has been open in another tab/window. In order to avoid some mischievous bugs, you can no longer edit this document using this tab/window. Please go back to your documents list.
+                            This document has been opened in another tab/window. In order to avoid some mischievous bugs, you can no longer edit this document using this tab/window. Please go back to your documents list.
                         </p>
                     </div>
                     <div class="modal-footer">
